[build-system]
requires = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "moolticutepy"
version = "2024.1001-alpha"
description = "Library an CLI to speak with moolticute service"
readme = {file = "README.md", content-type = "text/markdown"}
authors = [
    { name = "Raul Sampedro", email = "5142014+rsrdesarrollo@users.noreply.github.com" },
]
license = { file = "LICENSE" }
keywords = [
    "moolticute",
    "moolticuted",
    "mootlipass",
    "mooltipassminible",
    "mooltipassble",
    "password",
    "password manager",
]

dependencies = [
    "click==8.1.7",
    "websocket-client==1.8.0",
    "pydantic_core==2.20.1",
    "pydantic==2.8.2",
]

requires-python = ">=3.9"

classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
]

[project.scripts]
moolticutepy = "moolticutepy.cli:main"

[project.optional-dependencies]
dev = ["black", "bumpver", "isort", "pip-tools", "pytest"]

[project.urls]
Homepage = "https://github.com/rsrdesarrollo/moolticutepy"

[tool.bumpver]
current_version = "2024.1001-alpha"
version_pattern = "YYYY.BUILD[-TAG]"
commit_message = "bump version {old_version} -> {new_version}"
tag_message = "{new_version}"
tag_scope = "default"
pre_commit_hook = ""
post_commit_hook = ""
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [
    'current_version = "{version}"',
]
"README.md" = [
    "{version}",
    "{pep440_version}",
]

